--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
             <article class="section__information__container">
                 <div class="section__information__2">
                     <div>
-                        <div class="load" style="height: 150px;"></div>
+                        <div class=""  style="height: 150px;display: flex;align-items: center;justify-content: center;">
+                            <img src="storage/img/giphy.webp" style="
+                            width: 150px;
+                        " alt="">
+                        </div>
                     </div>
                     <div id="information__table__1" class="information__table__1">
                         <div class="load" style="height: 160px;"></div>
@@ -47,7 +51,11 @@
                 </div>
                 <div class="section__information__3">
                     <div>
-                        <div class="load" style="height: 150px;"></div>
+                        <div class=""  style="height: 150px;display: flex;align-items: center;justify-content: center;">
+                            <img src="storage/img/giphy.webp" style="
+                            width: 150px; transform: scaleX(-1);;
+                        " alt="">
+                        </div>
                     </div>
                     <div id="information__table__2" class="information__table__2">
                         <div class="load" style="height: 160px;"></div>
