--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             </article>
             <article class="section__information__container">
                 <div class="section__information__2">
-                    <div>
-                        <div class=""  style="height: 150px;display: flex;align-items: center;justify-content: center;">
+                    <div class="rocket">
+                        <div   style="height: 150px;display: flex;align-items: center;justify-content: center;">
                             <img src="storage/img/giphy.webp" style="
                             width: 150px;
                         " alt="">
