--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </article>
             <article class="section__information__container">
                 <div class="section__information__2">
-                    <div>
+                    <div class="carousel__item">
                         <div class="load" style="height: 150px;"></div>
                     </div>
                     <div id="information__table__1" class="information__table__1">
@@ -46,7 +46,7 @@
                     <div class="load" style="height: 350px"></div>
                 </div>
                 <div class="section__information__3">
-                    <div>
+                    <div class="carousel__item">
                         <div class="load" style="height: 150px;"></div>
                     </div>
                     <div id="information__table__2" class="information__table__2">
