feat: :sparkles: Nuevo icono para el footer (capsula)

--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
                 <ul>
                     <li id="rocket">
                         <a class="select" href="#">
-                            <img src="storage/img/rocket.svg">
+                            <img src="storage/img/icons/rocket.svg">
                             <span>Rockets</span>
                         </a>
                     </li>
                     <li id="capsules">
                         <a href="#">
-                            <img src="storage/img/capsule.svg">
+                            <img src="storage/img/icons/capsule.svg">
                             <span>Capsules</span>
                         </a>
                     </li>
