feat: :sparkles: Nuevo icono para el footer (astronauta)

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                     </li>
                     <li>
                         <a href="#">
-                            <img src="http://www.example.com">
-                            <span>a</span>
+                            <img src="storage/img/icons/astronauta.svg">
+                            <span>Crew</span>
                         </a>
                     </li>
                     <li>
