chore: :hammer: Eliminacion de console.log

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             <span>Capsules</span>
                         </a>
                     </li>
-                    <li>
+                    <li id="crew">
                         <a href="#">
                             <img src="storage/img/icons/astronauta.svg">
                             <span>Crew</span>
