--- a/index.html
+++ b/index.html
@@ -80,6 +80,18 @@
                             <span>Launches</span>
                         </a>
                     </li>
+                    <li id="core">
+                        <a href="#">
+                            <img src="storage/img/icons/core.svg">
+                            <span>Core</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="http://www.example.com">
+                            <span>a</span>
+                        </a>
+                    </li>
                     <li>
                         <a href="#">
                             <img src="http://www.example.com">
