--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
             </article>
             <footer class="footer">
                 <ul>
+                    <li id="company">
+                        <a href="#">
+                            <img src="storage/img/icons/SpaceX.svg">
+                            <span>Company</span>
+                        </a>
+                    </li>
                     <li id="rocket">
                         <a class="select" href="#">
                             <img src="storage/img/icons/rocket.svg">
@@ -84,12 +90,6 @@
                         <a href="#">
                             <img src="storage/img/icons/core.svg">
                             <span>Core</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <img src="http://www.example.com">
-                            <span>a</span>
                         </a>
                     </li>
                     <li>
