--- a/index.html
+++ b/index.html
@@ -62,16 +62,22 @@
                             <span>Company</span>
                         </a>
                     </li>
-                    <li id="rocket">
-                        <a class="select" href="#">
-                            <img src="storage/img/icons/rocket.svg">
-                            <span>Rockets</span>
-                        </a>
-                    </li>
                     <li id="capsules">
                         <a href="#">
                             <img src="storage/img/icons/capsule.svg">
                             <span>Capsules</span>
+                        </a>
+                    </li>
+                    <li id="history">
+                        <a href="#">
+                            <img src="storage/img/icons/history.svg">
+                            <span>history</span>
+                        </a>
+                    </li>
+                    <li id="rocket">
+                        <a class="select" href="#">
+                            <img src="storage/img/icons/rocket.svg">
+                            <span>Rockets</span>
                         </a>
                     </li>
                     <li id="crew">
@@ -90,12 +96,6 @@
                         <a href="#">
                             <img src="storage/img/icons/core.svg">
                             <span>Core</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <img src="http://www.example.com">
-                            <span>a</span>
                         </a>
                     </li>
                     <li>
