feat: :sparkles: Imagenes para el footer

--- a/index.html
+++ b/index.html
@@ -98,28 +98,28 @@
                             <span>Core</span>
                         </a>
                     </li>
-                    <li>
+                    <li id="landpads">
                         <a href="#">
-                            <img src="http://www.example.com">
-                            <span>a</span>
+                            <img src="storage/img/icons/landpads.svg">
+                            <span>landpads</span>
                         </a>
                     </li>
-                    <li>
+                    <li id="ships">
                         <a href="#">
-                            <img src="http://www.example.com">
-                            <span>a</span>
+                            <img src="storage/img/icons/ships.svg">
+                            <span>ships</span>
                         </a>
                     </li>
-                    <li>
+                    <li id="dragon">
                         <a href="#">
-                            <img src="http://www.example.com">
-                            <span>a</span>
+                            <img src="storage/img/icons/dragon.svg">
+                            <span>dragon</span>
                         </a>
                     </li>
-                    <li>
+                    <li id="ships">
                         <a href="#">
-                            <img src="http://www.example.com">
-                            <span>a</span>
+                            <img src="storage/img/icons/landpads.svg">
+                            <span>ships</span>
                         </a>
                     </li>
                 </ul>
