feat: ✨ Imagenes para el footer
Imagen de launchpad

--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
                             <span>dragon</span>
                         </a>
                     </li>
-                    <li id="ships">
+                    <li id="launchpad">
                         <a href="#">
-                            <img src="storage/img/icons/landpads.svg">
-                            <span>ships</span>
+                            <img src="storage/img/icons/launchpad.svg">
+                            <span>launchpad</span>
                         </a>
                     </li>
                 </ul>
