feat: ✨ Imagenes para el footer - Imagen de payloads - Imagen de roadster - Imagen de starlink

--- a/index.html
+++ b/index.html
@@ -122,6 +122,24 @@
                             <span>launchpad</span>
                         </a>
                     </li>
+                    <li id="payloads">
+                        <a href="#">
+                            <img src="storage/img/icons/payloads.svg">
+                            <span>payloads</span>
+                        </a>
+                    </li>
+                    <li id="roadster">
+                        <a href="#">
+                            <img src="storage/img/icons/roadster.svg">
+                            <span>roadster</span>
+                        </a>
+                    </li>
+                    <li id="starlink">
+                        <a href="#">
+                            <img src="storage/img/icons/starlink.svg">
+                            <span>starlink</span>
+                        </a>
+                    </li>
                 </ul>
             </footer>
         </section>
